* 2014-09-10 - tobias.friedrich@open-xchange.com

 - Fix for bug 34355: Use secured SAXBuilder in the replay WebDAV request 

* 2014-09-01 - jan.bauerdick@open-xchange.com

 - Fix for bug 33354: Added display message for invalid characters in folder name

* 2014-08-14 - martin.herfurth@open-xchange.com

 - Fix for bug 34041: Ignore additional elements in autoconfig xml.

* 2014-08-08 - jan.bauerdick@open-xchange.com

 - Fix for bug 33818: Added update task to check foreign keys and drop them if necessary

* 2014-08-06 - steffen.templin@open-xchange.com

 - Fix for bug 33918: Translate display names of subscription sources only if necessary

* 2014-08-04 - marcus.klein@open-xchange.com

 - Fix for bug 33891: Removed superfluous line throwing always an exception.

* 2014-08-04 - marc.arens@open-xchange.com

 - Fix for bug 33697: Respect destination folder for folder owners

* 2014-08-01 - thorben.betten@open-xchange.com

 - Fix for bug 33715: Accept new parameter "attach_src" for action=get request to let the client signal RFC822 source is supposed to be
                      attached to generated JSON mail representation
                      
* 2014-07-31 - thorben.betten@open-xchange.com

 - Fix for bug 33839: Escape site information when generating the publication site from selected template

* 2014-07-30 - tobias.friedrich@open-xchange.com

 - Fix for bug 32897: Send empty string for default alarms in CalDAV

* 2014-07-29 - tobias.friedrich@open-xchange.com

 - Fix for bug 33652: Also accept "updateToken" requests without service identifier 

* 2014-07-11 - jan.bauerdick@open-xchange.com

 - Fix for bug 33478: Run AttachmentCleaner without delay

* 2014-07-11 - thorben.betten@open-xchange.com

 - Fix for bug 33522: Wrong table was referenced in SQL statement to prepare table "user_attribute" to have UUID as primary key
 - Fix for bug 33396: Try to recover from malformed Content-Type value like ``=?windows-1252?q?application/pdf; name="blatt8.pdf"´´